--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,4 @@
 logging.level.org.springframework=INFO
 
 #comma separated list of rabbitmq servers: guest:guest@127.0.0.1:5672/virtualhost
-spring.rabbitmq.addresses=admin:Admin123@192.168.114.129:5672
-#spring.rabbitmq.addresses=guest:guest@localhost:5672,guest:guest@localhost:5673
+spring.rabbitmq.addresses=guest:guest@localhost:5672,guest:guest@localhost:5673
